# cpd-exam-code

./: .gitignore  CMakeLists.txt  Event.cpp  Event.h  README.md  a.out  gauge.cc  main.c  main.cc  makefile  opencl-features.cc  serial-main.cc  vertexer.c
base/: CMakeLists.txt  Event.cpp  Event.h  VertexCandidate.cpp  VertexCandidate.h  VertexerFast.cpp  VertexerFast.h
event/: CMakeLists.txt  Event.cpp  Event.h
routines/: CellFinder.cl  MeanRadius.cl  MeanRadius.h  Square.cl  Trackleter.cl  Trackleter.h
utils/: CMakeLists.txt  Definitions.h  Utilities.cpp  Utilities.h  definitions.h  err_code.cpp
vertex/: CMakeLists.txt  VertexCandidate.cpp  VertexCandidate.h
